# api/routes/songs/__init__.py
@@ -1,5 +1,5 @@
 from .routes import router
-from .dto import CreateSongResponse, GetSongResponse
+from .dto import SongCreateResponse, SongGetResponse
 from .actions import create_new_song_action, get_song_by_id_action
 
-__all__ = ['router', 'CreateSongResponse', 'GetSongResponse', 'create_new_song_action', 'get_song_by_id_action']
+__all__ = ['router', 'SongCreateResponse', 'SongGetResponse', 'create_new_song_action', 'get_song_by_id_action']
